Use name knapsack-pro-core for npm package

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "knapsack-pro-core-js",
+  "name": "knapsack-pro-core",
   "version": "0.1.0",
-  "description": "Knapsack Pro Core JS library splits tests across CI nodes and makes sure that tests will run in optimal time on each CI node. This library gives core features like communication with KnapsackPro.com API. This library is a dependency for other projects specific for particular test runner.",
+  "description": "Knapsack Pro Core library splits tests across CI nodes and makes sure that tests will run in optimal time on each CI node. This library gives core features like communication with KnapsackPro.com API. This library is a dependency for other projects specific for particular test runner.",
   "keywords": [
     "knapsack-pro",
     "test suite parallelisation",
