--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "npm": ">=5.6.0"
   },
   "scripts": {
-    "start": "gulp"
+    "start": "gulp",
+    "lint": "tslint 'src/**/*.ts'"
   },
   "homepage": "https://github.com/KnapsackPro/knapsack-pro-core-js",
   "repository": {
@@ -45,6 +46,7 @@
     "del": "^3.0.0",
     "gulp": "^4.0.0",
     "gulp-typescript": "^4.0.2",
+    "tslint": "^5.11.0",
     "typescript": "^3.0.1"
   }
 }
