--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "scripts": {
     "start": "gulp",
+    "tsc": "tsc",
     "lint": "tslint 'src/**/*.ts'"
   },
   "homepage": "https://github.com/KnapsackPro/knapsack-pro-core-js",
