Add main entry point to core

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     }
   ],
   "license": "MIT",
+  "main": "./src/knapsack-pro-core.ts",
   "engines": {
     "node": ">=8.11.1",
     "npm": ">=5.6.0"
