--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     }
   ],
   "license": "MIT",
-  "main": "index.ts",
+  "main": "bin/index.js",
   "engines": {
     "node": ">=8.11.1",
     "npm": ">=5.6.0"
