--- a/package.json
+++ b/package.json
@@ -38,12 +38,15 @@
     "url": "https://github.com/KnapsackPro/knapsack-pro-core-js/issues"
   },
   "dependencies": {
-    "axios": "^0.18.0"
+    "axios": "^0.18.0",
+    "bluebird": "^3.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.56",
     "@babel/preset-env": "^7.0.0-beta.56",
     "@babel/register": "^7.0.0-beta.56",
+    "@types/bluebird": "^3.5.23",
+    "@types/core-js": "^2.5.0",
     "@types/node": "^10.5.6",
     "del": "^3.0.0",
     "gulp": "^4.0.0",
