--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "noImplicitAny": true,
-    "outDir": "bin",
+    "outDir": "lib",
     "removeComments": true,
     "target": "es5",
     "lib": [
