--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
   "scripts": {
     "start": "gulp",
     "tsc": "tsc",
-    "lint": "tslint --project . --format stylish"
+    "lint": "tslint --project . --format stylish",
+    "doctoc": "doctoc --title \"## Table of Contents\" README.md"
   },
   "homepage": "https://knapsackpro.com",
   "repository": {
@@ -46,6 +47,7 @@
     "@babel/register": "^7.0.0-beta.56",
     "@types/node": "^10.5.6",
     "del": "^3.0.0",
+    "doctoc": "^1.3.1",
     "gulp": "^4.0.0",
     "gulp-typescript": "^4.0.2",
     "tslint": "^5.11.0",
