Include lib from root directory. This way for instance test/lib won't be included.

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "doctoc": "doctoc --title \"## Table of Contents\" README.md"
   },
   "files": [
-    "lib"
+    "/lib"
   ],
   "homepage": "https://knapsackpro.com",
   "repository": {
