--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
   "version": "0.2.0",
   "description": "Knapsack Pro Core library splits tests across CI nodes and makes sure that tests will run in optimal time on each CI node. This library gives core features like communication with KnapsackPro.com API. This library is a dependency for other projects specific for particular test runner.",
   "keywords": [
-    "knapsack-pro",
+    "knapsack",
+    "knapsack pro",
     "test suite parallelisation",
-    "parallelisation"
+    "parallelisation",
+    "testing",
+    "test",
+    "automation",
+    "CI"
   ],
   "author": "Knapsack Pro <arturtrzop@gmail.com> (https://knapsackpro.com)",
   "contributors": [
