--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "url": "https://github.com/KnapsackPro/knapsack-pro-core-js/issues"
   },
   "dependencies": {
-    "axios": "^0.18.0"
+    "axios": "^0.18.0",
+    "axios-retry": "^3.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.56",
