--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "axios-retry": "^3.1.1"
+    "axios-retry": "^3.1.1",
+    "winston": "^3.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.56",
