--- a/package.json
+++ b/package.json
@@ -60,7 +60,10 @@
     "doctoc": "^1.3.1",
     "gulp": "^4.0.0",
     "gulp-typescript": "^4.0.2",
-    "tslint": "^5.11.0",
+    "prettier": "1.15.3",
+    "prettier-tslint": "^0.4.1",
+    "tslint": "^5.12.0",
+    "tslint-config-airbnb": "^5.11.1",
     "typescript": "^3.0.1"
   }
 }
