--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "axios-retry": "^3.1.1",
+    "lodash": "^4.17.11",
     "winston": "^3.1.0"
   },
   "devDependencies": {
