--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "start": "gulp",
     "tsc": "tsc",
     "lint": "tslint --project . --format stylish",
+    "test": "jest",
     "doctoc": "doctoc --title \"## Table of Contents\" README.md"
   },
   "files": [
@@ -55,13 +56,16 @@
     "@babel/core": "^7.0.0-beta.56",
     "@babel/preset-env": "^7.0.0-beta.56",
     "@babel/register": "^7.0.0-beta.56",
+    "@types/jest": "^23.3.10",
     "@types/node": "^10.5.6",
     "del": "^3.0.0",
     "doctoc": "^1.3.1",
     "gulp": "^4.0.0",
     "gulp-typescript": "^4.0.2",
+    "jest": "^23.6.0",
     "prettier": "1.15.3",
     "prettier-tslint": "^0.4.1",
+    "ts-jest": "^23.10.5",
     "tslint": "^5.12.0",
     "tslint-config-airbnb": "^5.11.1",
     "typescript": "^3.2.2"
