--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,12 +4,7 @@
     "outDir": "lib",
     "removeComments": true,
     "target": "es5",
-    "lib": [
-      "es2015"
-    ]
+    "lib": ["es2015"]
   },
-  "include": [
-    "src/**/*.ts",
-    "*.ts"
-  ]
+  "include": ["src/**/*.ts", "*.ts"]
 }
