--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "outDir": "lib",
     "removeComments": true,
     "target": "es5",
-    "lib": ["es2015"]
+    "lib": ["es2015", "es2016.array.include"]
   },
   "include": ["src/**/*.ts", "*.ts"]
 }
