--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
   "scripts": {
     "start": "gulp",
     "tsc": "tsc",
-    "lint": "tslint --project . --format stylish",
+    "lint": "npm run lint:js && npm run lint:ts",
+    "lint:js": "eslint .",
+    "lint:ts": "tslint --project . --format stylish",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
@@ -62,10 +64,15 @@
     "@types/node": "^10.5.6",
     "del": "^3.0.0",
     "doctoc": "^1.3.1",
+    "eslint": "^5.11.1",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.14.0",
     "gulp": "^4.0.0",
     "gulp-typescript": "^4.0.2",
     "jest": "^23.6.0",
     "prettier": "1.15.3",
+    "prettier-eslint": "^8.8.2",
+    "prettier-eslint-cli": "^4.7.1",
     "prettier-tslint": "^0.4.1",
     "ts-jest": "^23.10.5",
     "tslint": "^5.12.0",
