--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,35 +5,35 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/node:8.11
+      - image: circleci/node:8.15
 
-    working_directory: ~/repo
+    working_directory: ~/knapsack-pro-core-js
 
     steps:
+      # check out source code to working directory
       - checkout
 
-      # Download and cache dependencies
+      # restore, install and cache dependencies
       - restore_cache:
           keys:
             - v1-dependencies-{{ checksum "package.json" }}
-            # fallback to using the latest cache if no exact match is found
+            # fallback to the latest cache if no exact match is found
             - v1-dependencies-
-
       - run: npm install
-
       - save_cache:
+          key: v1-dependencies-{{ checksum "package.json" }}
           paths:
             - node_modules
-          key: v1-dependencies-{{ checksum "package.json" }}
 
       # build project
       - run: npm run build
 
-      # run TSLint
+      # run code linters
       - run: npm run lint
 
-      # run tests and generate code coverage
+      # run tests and generate code coverage report
       - run: npm run test:coverage
 
+      # save code coverage report as artifact
       - store_artifacts:
           path: coverage
