Remove duplicated package.json that breaks publishing package
Create separate src/index.ts and don’t include root index.ts in
tsconfig to keep the same output directory structure in lib to allow
correctly require package.json in knapsack pro logger class

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,5 +6,5 @@
     "target": "es5",
     "lib": ["es2015", "es2016.array.include"]
   },
-  "include": ["src/**/*.ts", "*.ts"]
+  "include": ["src/**/*.ts"]
 }
