--- a/package.json
+++ b/package.json
@@ -53,9 +53,9 @@
     "winston": "^3.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.56",
-    "@babel/preset-env": "^7.0.0-beta.56",
-    "@babel/register": "^7.0.0-beta.56",
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.2.3",
+    "@babel/register": "^7.0.0",
     "@types/jest": "^23.3.10",
     "@types/node": "^10.5.6",
     "del": "^3.0.0",
