--- a/package.json
+++ b/package.json
@@ -48,8 +48,8 @@
     "url": "https://github.com/KnapsackPro/knapsack-pro-core-js/issues"
   },
   "dependencies": {
-    "axios": "^0.19.0",
-    "axios-retry": "^3.1.1",
+    "axios": "0.18.0",
+    "axios-retry": "^3.1.2",
     "winston": "^3.1.0"
   },
   "devDependencies": {
