--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,10 @@
 {
-  "extends": "airbnb-base"
+  "extends": ["airbnb-base", "prettier"],
+  "rules": {
+    "consistent-return": "warn",
+    "no-unused-vars": [
+      "error",
+      { "vars": "all", "args": "none", "ignoreRestSiblings": true }
+    ]
+  }
 }
