--- a/package.json
+++ b/package.json
@@ -60,15 +60,15 @@
     "@types/node": "^10.12.18",
     "del": "^3.0.0",
     "doctoc": "^1.4.0",
-    "eslint": "^5.11.1",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.14.0",
+    "eslint": "^7.7.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jest": "^23.20.0",
+    "prettier": "2.0.5",
     "gulp": "^4.0.0",
     "gulp-typescript": "^5.0.0",
-    "jest": "^24.8.0",
-    "prettier": "1.15.3",
-    "prettier-eslint": "^8.8.2",
-    "prettier-eslint-cli": "^4.7.1",
+    "jest": "^26.4.0",
     "prettier-tslint": "^0.4.1",
     "ts-jest": "^23.10.5",
     "tslint": "^5.12.0",
