--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,12 @@ jobs:
       - run: npm run build
 
       # run code linters
-      - run: npm run lint
+      - run:
+        name: Run code linters (ESLint)
+        command: npm run lint:script
+      - run:
+        name: Run code linters (Prettier)
+        command: npm run lint:format
 
       # run tests and generate code coverage report
       - run: npm run test:coverage
