--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "start": "gulp",
     "build": "gulp build",
     "lint": "npm run lint:script && npm run lint:format",
-    "lint:script": "eslint bin/** .",
+    "lint:script": "eslint .",
     "lint:format": "prettier --check .",
     "test": "jest",
     "test:watch": "jest --watch",
