--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,3 @@
 {
-  "extends": ["airbnb-base", "prettier"],
-  "rules": {
-    "consistent-return": "warn",
-    "no-unused-vars": [
-      "error",
-      { "vars": "all", "args": "none", "ignoreRestSiblings": true }
-    ]
-  }
+  "extends": ["airbnb-base", "prettier"]
 }
