Add prettier --check . as lint:format

--- a/package.json
+++ b/package.json
@@ -28,9 +28,10 @@
   "scripts": {
     "start": "gulp",
     "build": "gulp build",
-    "lint": "npm run lint:js && npm run lint:ts",
+    "lint": "npm run lint:js && npm run lint:ts && npm run lint:format",
     "lint:js": "eslint .",
     "lint:ts": "tslint --project . --format stylish",
+    "lint:format": "prettier --check .",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
