--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,15 @@ jobs:
       - run: npm run build
 
       # run code linters
-      - run: npm run lint
+      - run:
+        name: Run code linters (ESLint)
+        command: npm run lint:js
+      - run:
+        name: Run code linters (TSLint)
+        command: npm run lint:ts
+      - run:
+        name: Run code linters (Prettier)
+        command: npm run lint:format
 
       # run tests and generate code coverage report
       - run: npm run test:coverage
