--- a/package.json
+++ b/package.json
@@ -61,19 +61,16 @@
     "@types/node": "^10.12.18",
     "del": "^3.0.0",
     "doctoc": "^1.4.0",
+    "gulp": "^4.0.0",
+    "gulp-typescript": "^5.0.0",
+    "typescript": "^3.2.2",
     "eslint": "^7.7.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "^2.22.0",
-    "gulp": "^4.0.0",
-    "gulp-typescript": "^5.0.0",
-    "jest": "^24.8.0",
     "prettier": "2.0.5",
-    "prettier-eslint": "^11.0.0",
-    "prettier-eslint-cli": "^5.0.0",
-    "prettier-tslint": "^0.4.2",
-    "ts-jest": "^23.10.5",
     "tslint": "^6.1.3",
     "tslint-config-airbnb": "^5.11.2",
-    "typescript": "^3.2.2"
+    "ts-jest": "^23.10.5",
+    "jest": "^24.8.0"
   }
 }
