--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "automation",
     "CI"
   ],
-  "author": "Knapsack Pro <arturtrzop@gmail.com> (https://knapsackpro.com)",
+  "author": "Knapsack Pro <support@knapsackpro.com> (https://knapsackpro.com)",
   "contributors": [
     {
       "name": "Artur Trzop",
