--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "url": "https://github.com/KnapsackPro/knapsack-pro-core-js/issues"
   },
   "dependencies": {
-    "axios": "0.21.2",
+    "axios": "^0.21.2",
     "axios-retry": "^3.1.9",
     "winston": "^3.3.3"
   },
