--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
   "scripts": {
     "start": "gulp",
     "build": "gulp build",
-    "lint:js": "eslint .",
     "lint": "npm run lint:js && npm run lint:format",
+    "lint:js": "eslint . --ext .ts",
     "lint:format": "prettier --check .",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -58,16 +58,18 @@
     "@babel/register": "^7.10.5",
     "@types/jest": "^28.1.1",
     "@types/node": "^14.6.0",
+    "@typescript-eslint/eslint-plugin": "^5.27.1",
+    "@typescript-eslint/parser": "^5.27.1",
     "del": "^5.1.0",
     "doctoc": "^2.2.0",
-    "gulp": "^4.0.2",
-    "gulp-typescript": "^5.0.1",
-    "typescript": "^4.7.3",
-    "eslint": "^7.7.0",
+    "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "^2.22.0",
+    "gulp": "^4.0.2",
+    "gulp-typescript": "^5.0.1",
+    "jest": "^28.1.0",
     "prettier": "2.1.0",
     "ts-jest": "^28.0.4",
-    "jest": "^28.1.0"
+    "typescript": "^4.7.3"
   }
 }
