--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "gulp": "^4.0.2",
     "gulp-typescript": "^5.0.1",
     "jest": "^28.1.0",
-    "prettier": "2.1.0",
+    "prettier": "^2.6.2",
     "ts-jest": "^28.0.4",
     "typescript": "^4.7.3"
   }
