--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
+    "prettier-format": "prettier --config .prettierrc.json 'src/**/*.ts' --write",
     "doctoc": "doctoc --title \"## Table of Contents\" README.md"
   },
   "files": [
