--- a/package.json
+++ b/package.json
@@ -28,14 +28,14 @@
   "scripts": {
     "start": "gulp",
     "build": "gulp build",
-    "lint": "npm run lint:js && npm run lint:format",
-    "lint:js": "eslint . --ext .ts",
-    "lint:fix": "eslint . --ext .ts --fix",
-    "lint:format": "prettier --check .",
+    "lint": "npm run eslint:check && npm run prettier:check",
+    "eslint:check": "eslint . --ext .ts",
+    "eslint:format": "eslint . --ext .ts --fix",
+    "prettier:check": "prettier --check .",
+    "prettier:format": "prettier --config .prettierrc 'src/**/*.ts' --write",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "prettier-format": "prettier --config .prettierrc.json 'src/**/*.ts' --write",
     "doctoc": "doctoc --title \"## Table of Contents\" README.md"
   },
   "files": [
@@ -66,7 +66,9 @@
     "doctoc": "^2.2.0",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "gulp": "^4.0.2",
     "gulp-typescript": "^5.0.1",
     "jest": "^28.1.0",
