--- a/.eslintrc
+++ b/.eslintrc
@@ -16,6 +16,7 @@
     "func-names": "off",
     "no-process-exit": "off",
     "object-shorthand": "off",
-    "class-methods-use-this": "off"
+    "class-methods-use-this": "off",
+    "comma-dangle": ["error"]
   }
 }
