--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "eslint:format": "eslint . --ext .ts --fix",
     "prettier:check": "prettier --check .",
     "prettier:format": "prettier --config .prettierrc.json 'src/**/*.ts' --write",
-    "test": "jest",
+    "test": "jest --verbose",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "doctoc": "doctoc --title \"## Table of Contents\" README.md"
